--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,7 +7,7 @@ $font-family-headers: 'Abril Fatface', cursive;
 $blue: midnightblue;
 $red: rgb(175, 35, 35);
 // add a new variable $itFactory
-$itFactory: #607b60;
+$itFactory: #be00ff;
 
 $enable-rounded: false;
 $enable-shadows: true;
